# CPE442LAB

./: README.md
Archive/lab4/: cmake_install.cmake  main.cpp  sobel.cpp
Archive/lab4v3/: README.txt  sobel
Archive/lab4v3/include/: sobel.hpp
Archive/lab4v3/lab5v3/: Makefile
Archive/lab5/: CMakeLists.txt  main  main.cpp
Archive/lab5v2/include/: sobel.hpp
Archive/lab5v2/src/: sobel.cpp
Part_1/: DisplayImage
Part_2/: Makefile  README.txt
Part_2/src/: sobel.cpp
Part_3/: Makefile  sobel
Part_3/src/: sobel.cpp
lab2/: CMakeCache.txt  CMakeLists.txt  DisplayImage  DisplayImage.cpp  DisplayImage.h  Makefile  README.txt  cmake_install.cmake
lab2/src/: DisplayImage.cpp
lab3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  main.cpp  main.hpp  sobel  sobel.cpp  sobel.hpp
lab3/src/: sobel.cpp
lab4/: CMakeCache.txt  CMakeLists.txt  Makefile  main  main.cpp  main.hpp
lab4v2/: CMakeLists.txt  main  main.cpp
lab4v3/: CMakeCache.txt  Makefile  main  main.cpp  sobel
lab4v3/src/: sobel.cpp
lab5/: .main.cpp.swp  main.cpp
lab5v2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  main.cpp  sobel
lab5v2/src/: sobel.cpp
lab5v3/: CMakeCache.txt  Makefile  README.txt  main.cpp  sobel  sobel.hpp  video1.mov
lab5v3/src/: sobel.cpp
lab6/src/: sobel.cpp
